name:           putmix
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       print all anagrams preserving consonant/vowel structure
build-type:     Simple
build-depends:  base, containers

executable:     putmix
main-is:        Main.hs
hs-source-dirs: src
